# rsomics-bam-fingerprint

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  coverage.rs  lib.rs  metrics.rs  output.rs  sampling.rs
tests/: compat.rs
tests/golden/: cigar.bam  cigar.bam.bai  dense.bam  dense.bam.bai  multi.bam  multi.bam.bai  small.bam  small.bam.bai
